Freedom Sanbox Ant Deploy/src/objects/GoalSIPAmount__c.object
<CustomObject>
    <fields>
        <fullName>DebtCurrentYear__c</fullName>
        <description>It will contain the Debt Percentage before allocating any asset Goal</description>
        <label>Debt Current Year</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EquityCurrentYear__c</fullName>
        <description>It will contain the Equity percentage before allocating any asset to that goal</description>
        <label>Equity Current Year</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Goal_Year__c</fullName>
        <label>Goal Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Goal</label>
        <referenceTo>Goal__c</referenceTo>
        <relationshipLabel>GoalSIPsAmount</relationshipLabel>
        <relationshipName>GoalSIPsAmount</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GoldCurrentYear__c</fullName>
        <description>It will contain the Gold percentage before allocating any asset to that goal</description>
        <label>GoldCurrentYear</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SIP_Debt__c</fullName>
        <label>SIP Debt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIP_Equity__c</fullName>
        <label>SIP Equity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIP_Gold__c</fullName>
        <label>SIP Gold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIP_Outflow__c</fullName>
        <defaultValue>true</defaultValue>
        <label>SIP_Outflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIP_Total__c</fullName>
        <formula>SIP_Debt__c +   SIP_Equity__c  + SIP_Gold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIP Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isNewSIP__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isNewSIP</label>
        <type>Checkbox</type>
    </fields>
    <label>GoalSIPAmount</label>
    <nameField>
        <displayFormat>GS-{00000000}</displayFormat>
        <label>Reference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GoalSIPsAmount</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>